--- a/index.html
+++ b/index.html
@@ -149,8 +149,9 @@
       header{width:100%;padding-left:0;padding-right:0;box-sizing:border-box;z-index:40;position:relative}
       header .brand, header .nav-toggle, header nav{padding-left:16px;padding-right:16px}
 
-      /* keep nav hidden in-flow when collapsed */
-      nav{width:100%;justify-content:flex-end;position:relative;max-height:0;overflow:hidden;opacity:0}
+       /* keep nav hidden in-flow when collapsed */
+       nav{display:none;width:100%;justify-content:flex-end;position:relative;max-height:0;overflow:hidden;opacity:0}
+
 
       /* popup-style menu when open: smaller, centered, and elevated */
       nav.open{position:fixed;left:50%;top:8vh;transform:translateX(-50%);width:calc(100% - 32px);max-width:720px;max-height:84vh;background:linear-gradient(180deg,#070707,#0b0b0b);padding:20px 18px;display:flex;flex-direction:column;gap:16px;align-items:center;justify-content:flex-start;opacity:1;z-index:60;border-radius:12px;box-shadow:0 20px 40px rgba(0,0,0,0.6)}
