fix(links): correct GitHub URL to github.com/elixir-games

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     "name":"Elixir Games",
     "url":"https://elixirgames.io/",
     "logo":"https://elixirgames.io/favicon-192.png",
-    "sameAs":["https://github.com/elixirgames"],
+    "sameAs":["https://github.com/elixir-games"],
     "contactPoint":[{"@type":"ContactPoint","email":"contact@elixirgames.io","contactType":"customer support"}]
   }</script>
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
@@ -300,7 +300,7 @@
         </div>
       </div>
 
-      <div style="margin-top:14px;color:var(--muted);font-size:13px">See developer notes and prototypes on our <a href="https://github.com/elixirgames" style="color:var(--accent)">GitHub</a>.</div>
+      <div style="margin-top:14px;color:var(--muted);font-size:13px">See developer notes and prototypes on our <a href="https://github.com/elixir-games" style="color:var(--accent)">GitHub</a>.</div>
     </section>
 
     <section id="careers" class="card">
@@ -421,7 +421,7 @@
         <aside class="contact-card">
           <div style="font-weight:700">Office</div>
           <div style="margin-top:8px;color:var(--muted);font-size:13px">Remote-first · Open to contractors and remote hires.</div>
-          <div style="margin-top:12px;color:var(--muted);font-size:13px">Support: <a href="#contact" style="color:var(--accent)">Help Center</a> · <a href="https://github.com/elixirgames" style="color:var(--accent)">GitHub</a></div>
+          <div style="margin-top:12px;color:var(--muted);font-size:13px">Support: <a href="#contact" style="color:var(--accent)">Help Center</a> · <a href="https://github.com/elixir-games" style="color:var(--accent)">GitHub</a></div>
         </aside>
       </div>
     </section>
