--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     .back-to-top.show{opacity:1;transform:none}
     .back-to-top:focus{outline:2px solid var(--accent);outline-offset:2px}
     @media (max-width:640px){
-      .back-to-top{left:50%;right:auto;bottom:24px;transform:translateX(-50%) translateY(8px)}
+      .back-to-top{left:50%;right:auto;bottom:calc(64px + constant(safe-area-inset-bottom));bottom:calc(64px + env(safe-area-inset-bottom));transform:translateX(-50%) translateY(8px)}
       .back-to-top.show{transform:translateX(-50%) translateY(0)}
     }
 
