--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     .feature p{margin:0;color:var(--muted);font-size:13px}
 
     /* games list */
-    .game-card{display:flex;gap:12px;align-items:center;padding:12px;border-radius:10px;background:linear-gradient(180deg, rgba(255,255,255,0.008), rgba(255,255,255,0.004));border:1px solid rgba(255,255,255,0.02)}
+    .game-card{display:flex;gap:12px;align-items:center;padding:16px;border-radius:10px;background:linear-gradient(180deg, rgba(255,255,255,0.012), rgba(255,255,255,0.006));border:1px solid rgba(255,255,255,0.02);box-shadow:0 6px 18px rgba(0,0,0,0.35)}
     .game-thumb{width:72px;height:72px;border-radius:10px;overflow:hidden;flex:0 0 auto}
     .game-thumb img{width:100%;height:100%;object-fit:cover;display:block}
     .game-meta{font-size:13px;color:var(--muted);margin-top:6px}
