--- a/index.html
+++ b/index.html
@@ -74,21 +74,7 @@
     <header>
       <div class="brand">
         <div class="logo" aria-hidden="true">
-          <!-- Test tube logo -->
-          <svg viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <rect x="0" y="0" width="64" height="64" rx="12" fill="transparent" />
-            <g transform="translate(10,6)">
-              <path d="M12 0c1.1 0 2 .9 2 2v6.6l8.3 8.3c3.1 3.1 3.1 8.2 0 11.3L20.6 40c-2.9 2.9-7.6 2.9-10.6 0L1.8 31.1c-3.1-3.1-3.1-8.2 0-11.3L10.1 11.6V2c0-1.1.9-2 2-2z" fill="#111"/>
-              <path d="M21 18c1.7 1.7 1.7 4.5 0 6.2L17 28.2c-.9.9-2.4.9-3.3 0l-8.4-8.4c-1.7-1.7-1.7-4.5 0-6.2L9.3 6H11V18h10z" fill="url(#g)" opacity="0.98"/>
-              <defs>
-                <linearGradient id="g" x1="0" y1="0" x2="1" y2="1">
-                  <stop offset="0%" stop-color="#609C66" stop-opacity="1"/>
-                  <stop offset="100%" stop-color="#3D6341" stop-opacity="1"/>
-                </linearGradient>
-              </defs>
-              <circle cx="22" cy="8" r="2" fill="#1d1d1d" opacity="0.6" />
-            </g>
-          </svg>
+          <img src="/avatar.png" alt="Elixir Games logo" style="width:44px;height:44px;border-radius:8px;object-fit:cover;"/>
         </div>
         <div>
           <h1>Elixir Games</h1>
@@ -153,7 +139,7 @@
         </div>
 
         <div class="card" style="display:flex;gap:12px;align-items:center">
-          <div style="width:48px;height:48px;border-radius:8px;background:linear-gradient(180deg, rgba(57,255,20,0.06), rgba(57,255,20,0.01));display:flex;align-items:center;justify-content:center;color:var(--accent);font-weight:700">EG</div>
+          <div style="width:48px;height:48px;border-radius:8px;overflow:hidden;display:flex;align-items:center;justify-content:center;"><img src="/avatar.png" alt="EG" style="width:100%;height:100%;object-fit:cover;"/></div>
           <div>
             <div style="font-weight:700">Open Source</div>
             <div style="font-size:13px;color:var(--muted)">We publish tools and small prototypes on GitHub.</div>
