style(mobile): increase header top padding on small screens

--- a/index.html
+++ b/index.html
@@ -145,9 +145,10 @@
       .contact-grid > div:first-child{grid-column:1;grid-row:1}
       .contact-grid > aside{grid-column:1;grid-row:2;margin-top:8px}
 
-      /* Header should span full width on mobile */
-      header{width:100%;padding-left:0;padding-right:0;box-sizing:border-box;z-index:40;position:relative}
-      header .brand, header .nav-toggle, header nav{padding-left:16px;padding-right:16px}
+       /* Header should span full width on mobile */
+       header{width:100%;padding-top:20px;padding-left:0;padding-right:0;box-sizing:border-box;z-index:40;position:relative}
+       header .brand, header .nav-toggle, header nav{padding-left:16px;padding-right:16px}
+
 
        /* keep nav hidden in-flow when collapsed */
        nav{display:none;width:100%;justify-content:flex-end;position:relative;max-height:0;overflow:hidden;opacity:0}
