style(careers): visually separate job listings with card styling

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
     img, .preview, .card, .game-thumb, .game-thumb img{max-width:100%;height:auto}
 
     .features{display:grid;grid-template-columns:repeat(3,1fr);gap:14px;margin-top:28px}
+    /* team/job cards - visually separated */
+    .team-card{padding:16px;background:linear-gradient(180deg, rgba(255,255,255,0.012), rgba(255,255,255,0.006));border-radius:10px;border:1px solid rgba(255,255,255,0.02);box-shadow:0 6px 18px rgba(0,0,0,0.35)}
+    .team-card h3{margin:0 0 8px 0}
     .feature{padding:16px;background:rgba(255,255,255,0.02);border-radius:10px;border:1px solid rgba(255,255,255,0.02)}
     .feature h3{margin:0 0 6px 0;color:#fff;font-size:16px}
     .feature p{margin:0;color:var(--muted);font-size:13px}
