fix(games): constrain game thumb size for consistent layout

--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
     .feature h3{margin:0 0 6px 0;color:#fff;font-size:16px}
     .feature p{margin:0;color:var(--muted);font-size:13px}
 
+    /* games list */
+    .game-card{display:flex;gap:12px;align-items:center;padding:12px;border-radius:10px;background:linear-gradient(180deg, rgba(255,255,255,0.008), rgba(255,255,255,0.004));border:1px solid rgba(255,255,255,0.02)}
+    .game-thumb{width:72px;height:72px;border-radius:10px;overflow:hidden;flex:0 0 auto}
+    .game-thumb img{width:100%;height:100%;object-fit:cover;display:block}
+    .game-meta{font-size:13px;color:var(--muted);margin-top:6px}
+    .actions{margin-top:12px;display:flex;gap:8px}
+
     footer{margin-top:48px;color:var(--muted);font-size:13px;display:flex;justify-content:space-between;align-items:center}
 
     /* small screens */
