--- a/index.html
+++ b/index.html
@@ -128,13 +128,22 @@
       .hero-left{order:1}
       .lead{font-size:28px}
       .preview{height:220px}
-      .wrap{padding:18px;margin:16px}
+      /* Make wrap full-bleed on mobile so sections use full available width */
+      .wrap{padding:0;margin:0;max-width:100%;width:100%}
+      /* Keep internal content padding so cards don't touch edges */
+      .wrap > *{padding-left:16px;padding-right:16px}
       .features{grid-template-columns:1fr}
       .section-grid{grid-template-columns:1fr}
       .contact-grid{grid-template-columns:1fr}
+      /* Ensure inline grid containers collapse to single column on small screens */
+      [style*="grid-template-columns"]{grid-template-columns:1fr !important}
       nav{width:100%;justify-content:flex-end}
       .logo{margin-right:auto}
       footer{flex-direction:column;gap:12px;align-items:start}
+      /* make cards stretch full width inside wrap */
+      .card, section.card{width:100%;max-width:100%;margin:0;border-radius:10px}
+      /* allow small max-width elements to scale down on narrow screens */
+      [style*="max-width:240px"]{max-width:100% !important}
     }
 
     /* small animation for liquid */
@@ -173,8 +182,8 @@
   <div class="wrap">
     <header>
       <div class="brand">
-        <div class="logo" tabindex="0" aria-label="Elixir Games logo" role="img">
-          <img src="/avatar.png" alt="Elixir Games logo" style="width:44px;height:44px;border-radius:8px;object-fit:cover;"/>
+          <div class="logo" tabindex="0" aria-label="Elixir Games logo" role="img">
+          <img src="/avatar.png" alt="Elixir Games logo" style="width:100%;height:100%;border-radius:8px;object-fit:cover;max-width:44px;max-height:44px"/>
         </div>
         <div>
           <h1>Elixir Games</h1>
