--- a/index.html
+++ b/index.html
@@ -44,97 +44,67 @@
       --muted:#9aa0a6;
       --accent:#609C66; /* sampled from avatar */
       --glass: rgba(255,255,255,0.03);
-      --glass-2: rgba(255,255,255,0.02);
       --radius:12px;
-      --max:1200px;
-      --gap:28px;
-      --soft-shadow: 0 10px 30px rgba(0,0,0,0.5);
+      --max:1100px;
+      --gap:24px;
     }
-
     *{box-sizing:border-box}
     html,body{height:100%}
     body{margin:0;font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; background:linear-gradient(180deg,#050505 0%, #0b0b0b 100%); color:#e9eef1; -webkit-font-smoothing:antialiased}
-
-    .wrap{max-width:var(--max);margin:36px auto;padding:36px 28px}
-
-    header{display:flex;align-items:center;justify-content:space-between;gap:20px;margin-bottom:6px}
+    .wrap{max-width:var(--max);margin:40px auto;padding:40px;}
+    header{display:flex;align-items:center;justify-content:space-between;gap:20px}
     .brand{display:flex;align-items:center;gap:14px}
-    .logo{width:56px;height:56px;display:flex;align-items:center;justify-content:center;background:linear-gradient(180deg, rgba(96,156,102,0.06), rgba(96,156,102,0.02));border-radius:12px;box-shadow:0 8px 22px rgba(0,0,0,0.45);border:1px solid rgba(255,255,255,0.02);} 
-    .logo img{width:44px;height:44px;border-radius:9px;object-fit:cover;display:block}
-    h1{font-size:20px;margin:0;color:#fff}
-    header .studio{font-size:12px;color:var(--muted);margin-top:2px}
-
-    nav{display:flex;gap:10px;align-items:center}
-    a.nav-btn{background:transparent;color:var(--muted);padding:8px 12px;border-radius:10px;text-decoration:none;font-weight:700;border:1px solid transparent;transition:all .14s;font-size:13px}
-    a.nav-btn:hover{background:rgba(96,156,102,0.06);color:var(--accent);border-color:rgba(96,156,102,0.12);box-shadow:0 8px 22px rgba(57,255,20,0.03)}
-    a.btn{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.006));color:var(--accent);padding:8px 14px;border-radius:10px;text-decoration:none;font-weight:700;border:1px solid rgba(96,156,102,0.08);font-size:13px}
+    .logo{width:54px;height:54px;display:flex;align-items:center;justify-content:center;background:linear-gradient(180deg, rgba(57,255,20,0.06), rgba(57,255,20,0.01));border-radius:10px;box-shadow:0 6px 18px rgba(57,255,20,0.06);}
+    .logo svg{width:34px;height:34px}
+    h1{font-size:28px;margin:0;color:#fff}
+    nav{display:flex;gap:12px;align-items:center}
+    a.nav-btn{background:transparent;color:var(--muted);padding:8px 12px;border-radius:10px;text-decoration:none;font-weight:600;border:1px solid rgba(255,255,255,0.04);transition:all .16s}
+    a.nav-btn:hover{background:rgba(57,255,20,0.06);color:var(--accent);border-color:rgba(57,255,20,0.12);box-shadow:0 8px 22px rgba(57,255,20,0.04)}
+    a.btn{background:var(--glass);color:var(--accent);padding:8px 14px;border-radius:10px;text-decoration:none;font-weight:600;border:1px solid rgba(57,255,20,0.08)}
     a.ghost{color:var(--muted);background:transparent;border:1px solid transparent}
 
-    /* hero layout */
-    .hero{display:grid;grid-template-columns:1fr 420px;gap:var(--gap);align-items:start;margin-top:18px}
-    .hero-left{padding:26px;background:linear-gradient(180deg, rgba(255,255,255,0.018), rgba(255,255,255,0.006));border-radius:16px;border:1px solid rgba(255,255,255,0.02);box-shadow:var(--soft-shadow)}
-    .kicker{display:inline-block;padding:6px 10px;background:linear-gradient(90deg, rgba(96,156,102,0.09), rgba(96,156,102,0.03));color:var(--accent);border-radius:999px;font-weight:800;font-size:12px}
-    .lead{font-size:40px;line-height:1.02;margin:14px 0 8px;color:#fff}
-    .desc{color:var(--muted);margin-bottom:18px;font-size:15px}
+    .hero{display:grid;grid-template-columns:1fr 420px;gap:var(--gap);align-items:center;margin-top:48px}
+    .hero-left{padding:28px;background:linear-gradient(180deg, rgba(255,255,255,0.02), transparent);border-radius:var(--radius);}    
+    .kicker{display:inline-block;padding:6px 10px;background:rgba(57,255,20,0.08);color:var(--accent);border-radius:999px;font-weight:700;font-size:12px}
+    .lead{font-size:44px;line-height:1.02;margin:18px 0;color:#fff}
+    .desc{color:var(--muted);margin-bottom:20px}
     .ctas{display:flex;gap:12px}
+    .card{background:linear-gradient(90deg, rgba(255,255,255,0.012), rgba(255,255,255,0.006));padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,0.02)}
 
-    .card{background:linear-gradient(90deg, rgba(255,255,255,0.012), rgba(255,255,255,0.006));padding:18px;border-radius:14px;border:1px solid rgba(255,255,255,0.02)}
+    .hero-right{display:flex;flex-direction:column;gap:16px}
+    .preview{height:320px;background:linear-gradient(180deg, rgba(57,255,20,0.04), rgba(0,0,0,0.2));border-radius:12px;display:flex;align-items:center;justify-content:center;border:1px solid rgba(57,255,20,0.06)}
+    .preview .device{width:85%;height:85%;background:linear-gradient(180deg,#020202,#0b0b0b);border-radius:10px;border:1px solid rgba(255,255,255,0.02);display:flex;align-items:center;justify-content:center;color:var(--muted)}
 
-    .hero-right{display:flex;flex-direction:column;gap:14px}
-    .preview{height:320px;background:linear-gradient(180deg, rgba(96,156,102,0.04), rgba(0,0,0,0.2));border-radius:12px;display:flex;align-items:center;justify-content:center;border:1px solid rgba(96,156,102,0.06)}
-    .preview .device{width:92%;height:88%;background:linear-gradient(180deg,#020202,#0b0b0b);border-radius:12px;border:1px solid rgba(255,255,255,0.02);display:flex;align-items:center;justify-content:center;color:var(--muted);padding:18px}
-
-    /* sections */
-    section.card{padding:22px;margin-top:24px;border-radius:14px;background:linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.006));border:1px solid rgba(255,255,255,0.02);box-shadow:0 8px 26px rgba(0,0,0,0.45)}
-    section.card h2{font-size:20px;margin:0 0 8px;color:#fff}
-    section.card .desc{margin:0 0 12px}
-    .section-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:14px}
-
-    .features{display:grid;grid-template-columns:repeat(3,1fr);gap:14px;margin-top:18px}
-    .feature{padding:18px;background:linear-gradient(180deg, rgba(0,0,0,0.18), rgba(255,255,255,0.01));border-radius:12px;border:1px solid rgba(255,255,255,0.02);min-height:110px}
-    .feature h3{margin:0 0 8px 0;color:#fff;font-size:16px}
+    .features{display:grid;grid-template-columns:repeat(3,1fr);gap:14px;margin-top:28px}
+    .feature{padding:16px;background:rgba(255,255,255,0.02);border-radius:10px;border:1px solid rgba(255,255,255,0.02)}
+    .feature h3{margin:0 0 6px 0;color:#fff;font-size:16px}
     .feature p{margin:0;color:var(--muted);font-size:13px}
-    .feature .meta{margin-top:10px;color:var(--muted);font-size:13px}
 
-    /* new utilities */
-    .section-header{display:flex;align-items:baseline;justify-content:space-between;gap:12px;margin-bottom:12px}
-    .section-header h2{font-size:22px;margin:0}
-    .pill{display:inline-block;padding:6px 10px;border-radius:999px;background:linear-gradient(90deg, rgba(96,156,102,0.06), rgba(96,156,102,0.02));color:var(--accent);font-weight:800;font-size:13px}
+    footer{margin-top:48px;color:var(--muted);font-size:13px;display:flex;justify-content:space-between;align-items:center}
 
-    .game-card{display:flex;gap:12px;align-items:center;padding:12px;border-radius:10px;background:linear-gradient(180deg, rgba(255,255,255,0.008), rgba(255,255,255,0.004));border:1px solid rgba(255,255,255,0.02)}
-    .game-thumb{width:84px;height:84px;border-radius:10px;overflow:hidden;background:#0b0b0b;display:flex;align-items:center;justify-content:center}
-    .game-meta{font-size:13px;color:var(--muted);margin-top:6px}
-    .actions{margin-top:12px;display:flex;gap:8px}
-
-    .team-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:12px}
-    .team-card{padding:12px;border-radius:10px;background:linear-gradient(180deg, rgba(255,255,255,0.008), rgba(255,255,255,0.004));border:1px solid rgba(255,255,255,0.02);text-align:left}
-
-    .contact-grid{display:grid;grid-template-columns:1fr 320px;gap:16px;align-items:start}
-    .contact-card{padding:14px;border-radius:10px;background:linear-gradient(180deg, rgba(255,255,255,0.008), rgba(255,255,255,0.004));border:1px solid rgba(255,255,255,0.02)}
-
-    /* team list */
-    .team-list{display:flex;gap:12px;flex-direction:column}
-    .team-list > div{background:transparent;padding:6px 0}
-
-    /* forms */
-    form input, form select, form textarea{padding:10px;border-radius:10px;border:1px solid rgba(255,255,255,0.04);background:transparent;color:inherit;font-size:14px}
-
-    /* footer */
-    footer{margin-top:36px;color:var(--muted);font-size:13px;display:flex;justify-content:space-between;align-items:center}
-
-    /* responsive */
-    @media (max-width:1000px){
-      .hero{grid-template-columns:1fr;}
+    /* small screens */
+    @media (max-width:900px){
+      .hero{grid-template-columns:1fr;grid-auto-rows:auto}
+      .brand h1{font-size:20px}
       .lead{font-size:34px}
+      .preview{height:260px}
       .features{grid-template-columns:1fr 1fr}
-      .wrap{padding:24px}
-      .contact-grid{grid-template-columns:1fr}
+      .wrap{padding:28px}
+      nav{flex-wrap:wrap;gap:8px}
     }
-    @media (max-width:520px){
+    @media (max-width:640px){
+      .hero{grid-template-columns:1fr;}
+      .hero-right{order:2}
+      .hero-left{order:1}
+      .lead{font-size:28px}
+      .preview{height:220px}
       .wrap{padding:18px;margin:16px}
       .features{grid-template-columns:1fr}
-      .preview{height:220px}
-      .lead{font-size:26px}
+      .section-grid{grid-template-columns:1fr}
+      .contact-grid{grid-template-columns:1fr}
+      nav{width:100%;justify-content:flex-end}
+      .logo{margin-right:auto}
+      footer{flex-direction:column;gap:12px;align-items:start}
     }
 
     /* small animation for liquid */
@@ -142,9 +112,6 @@
     @keyframes wave{0%{transform:translateY(0)}50%{transform:translateY(-4px)}100%{transform:translateY(0)}}
     .logo img{transition:filter .35s, transform .35s}
     .logo.liquid-active img{filter:url(#liquid-filter);transform:translateY(-3px) scale(1.04);box-shadow:0 10px 24px rgba(0,0,0,0.35)}
-
-    /* subtle section separators */
-    section.card + section.card{margin-top:18px}
   </style>
 </head>
 <body>
