--- a/index.html
+++ b/index.html
@@ -165,11 +165,10 @@
       /* allow small max-width elements to scale down on narrow screens */
       [style*="max-width:240px"]{max-width:100% !important}
 
-      /* make contact form fields extend to full available page width */
-      #contact .card{padding-left:0;padding-right:0}
-      .contact-grid > div:first-child{padding-left:0;padding-right:0}
-      .contact-grid > div:first-child form{padding:12px 16px}
-      .contact-grid input, .contact-grid select, .contact-grid textarea{width:100%;box-sizing:border-box}
+      /* make Office aside (contact-card) span full width and use internal padding */
+      #contact .contact-card{width:100%;max-width:100%;padding-left:0;padding-right:0;box-sizing:border-box}
+      #contact .contact-card{padding:12px 16px}
+      #contact .contact-card > *{width:100%;box-sizing:border-box}
     }
 
     /* small animation for liquid */
