--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     .logo{width:54px;height:54px;display:flex;align-items:center;justify-content:center;background:linear-gradient(180deg, rgba(57,255,20,0.06), rgba(57,255,20,0.01));border-radius:10px;box-shadow:0 6px 18px rgba(57,255,20,0.06);}
     .logo svg{width:34px;height:34px}
     h1{font-size:28px;margin:0;color:#fff}
-    nav{display:flex;gap:14px}
+    nav{display:flex;gap:12px;align-items:center}
+    a.nav-btn{background:transparent;color:var(--muted);padding:8px 12px;border-radius:10px;text-decoration:none;font-weight:600;border:1px solid rgba(255,255,255,0.04);transition:all .16s}
+    a.nav-btn:hover{background:rgba(57,255,20,0.06);color:var(--accent);border-color:rgba(57,255,20,0.12);box-shadow:0 8px 22px rgba(57,255,20,0.04)}
     a.btn{background:var(--glass);color:var(--accent);padding:8px 14px;border-radius:10px;text-decoration:none;font-weight:600;border:1px solid rgba(57,255,20,0.08)}
     a.ghost{color:var(--muted);background:transparent;border:1px solid transparent}
 
@@ -93,8 +95,12 @@
         </div>
       </div>
       <nav>
-        <a class="ghost" href="#">Games</a>
-        <a class="ghost" href="#">About</a>
+        <a class="nav-btn" href="#home">Home</a>
+        <a class="nav-btn" href="#games">Games</a>
+        <a class="nav-btn" href="#careers">Careers</a>
+        <a class="nav-btn" href="#support">Support</a>
+        <a class="nav-btn" href="#about">About</a>
+        <a class="nav-btn" href="#contact">Contact</a>
         <a class="btn" href="#play">Play Now</a>
       </nav>
     </header>
